data/derived/comb/progs/unify/prog7035.ml.out
Characters 44-46:
  let r = rand(0.depth) in
               ^^
Error: This expression has type float
       This is not a function; it cannot be applied.
